src/half_edge/snapshots/linnet__half_edge__tests__hairy_three_loop.snap
---
source: src/half_edge/tests.rs
expression: graph
---
HedgeGraph(
  node_data: [
    (),
    (),
    (),
    (),
  ],
  nodes: [
    HedgeNode(
      internal_graph: InternalSubGraph(
        filter: BitSeq(
          order: "bitvec::order::Lsb0",
          head: BitIdx(
            width: 64,
            index: 0,
          ),
          bits: 15,
          data: [
            0,
          ],
        ),
        loopcount: Some(0),
      ),
      hairs: BitSeq(
        order: "bitvec::order::Lsb0",
        head: BitIdx(
          width: 64,
          index: 0,
        ),
        bits: 15,
        data: [
          16473,
        ],
      ),
    ),
    HedgeNode(
      internal_graph: InternalSubGraph(
        filter: BitSeq(
          order: "bitvec::order::Lsb0",
          head: BitIdx(
            width: 64,
            index: 0,
          ),
          bits: 15,
          data: [
            0,
          ],
        ),
        loopcount: Some(0),
      ),
      hairs: BitSeq(
        order: "bitvec::order::Lsb0",
        head: BitIdx(
          width: 64,
          index: 0,
        ),
        bits: 15,
        data: [
          934,
        ],
      ),
    ),
    HedgeNode(
      internal_graph: InternalSubGraph(
        filter: BitSeq(
          order: "bitvec::order::Lsb0",
          head: BitIdx(
            width: 64,
            index: 0,
          ),
          bits: 15,
          data: [
            0,
          ],
        ),
        loopcount: Some(0),
      ),
      hairs: BitSeq(
        order: "bitvec::order::Lsb0",
        head: BitIdx(
          width: 64,
          index: 0,
        ),
        bits: 15,
        data: [
          3072,
        ],
      ),
    ),
    HedgeNode(
      internal_graph: InternalSubGraph(
        filter: BitSeq(
          order: "bitvec::order::Lsb0",
          head: BitIdx(
            width: 64,
            index: 0,
          ),
          bits: 15,
          data: [
            0,
          ],
        ),
        loopcount: Some(0),
      ),
      hairs: BitSeq(
        order: "bitvec::order::Lsb0",
        head: BitIdx(
          width: 64,
          index: 0,
        ),
        bits: 15,
        data: [
          12288,
        ],
      ),
    ),
  ],
  base_nodes: 4,
  involution: Involution(
    inv: [
      Source(
        data: EdgeData(
          orientation: Undirected,
          data: Some(()),
        ),
        sink_idx: Hedge(1),
      ),
      Sink(
        source_idx: Hedge(0),
      ),
      Source(
        data: EdgeData(
          orientation: Undirected,
          data: Some(()),
        ),
        sink_idx: Hedge(3),
      ),
      Sink(
        source_idx: Hedge(2),
      ),
      Source(
        data: EdgeData(
          orientation: Undirected,
          data: Some(()),
        ),
        sink_idx: Hedge(5),
      ),
      Sink(
        source_idx: Hedge(4),
      ),
      Identity(
        data: EdgeData(
          orientation: Undirected,
          data: Some(()),
        ),
        underlying: Sink,
      ),
      Identity(
        data: EdgeData(
          orientation: Undirected,
          data: Some(()),
        ),
        underlying: Sink,
      ),
      Identity(
        data: EdgeData(
          orientation: Undirected,
          data: Some(()),
        ),
        underlying: Sink,
      ),
      Source(
        data: EdgeData(
          orientation: Undirected,
          data: Some(()),
        ),
        sink_idx: Hedge(10),
      ),
      Sink(
        source_idx: Hedge(9),
      ),
      Source(
        data: EdgeData(
          orientation: Undirected,
          data: Some(()),
        ),
        sink_idx: Hedge(12),
      ),
      Sink(
        source_idx: Hedge(11),
      ),
      Source(
        data: EdgeData(
          orientation: Undirected,
          data: Some(()),
        ),
        sink_idx: Hedge(14),
      ),
      Sink(
        source_idx: Hedge(13),
      ),
    ],
    hedge_data: [
      NodeIndex(0),
      NodeIndex(1),
      NodeIndex(1),
      NodeIndex(0),
      NodeIndex(0),
      NodeIndex(1),
      NodeIndex(0),
      NodeIndex(1),
      NodeIndex(1),
      NodeIndex(1),
      NodeIndex(2),
      NodeIndex(2),
      NodeIndex(3),
      NodeIndex(3),
      NodeIndex(0),
    ],
  ),
)
