src/half_edge/snapshots/linnet__half_edge__tests__hairy_three_loop_cycles.snap
---
source: src/half_edge/tests.rs
expression: cycles
---
[
  Cycle(
    filter: BitSeq(
      order: "bitvec::order::Lsb0",
      head: BitIdx(
        width: 64,
        index: 0,
      ),
      bits: 15,
      data: [
        32259,
      ],
    ),
    loop_count: Some(1),
  ),
  Cycle(
    filter: BitSeq(
      order: "bitvec::order::Lsb0",
      head: BitIdx(
        width: 64,
        index: 0,
      ),
      bits: 15,
      data: [
        32268,
      ],
    ),
    loop_count: Some(1),
  ),
  Cycle(
    filter: BitSeq(
      order: "bitvec::order::Lsb0",
      head: BitIdx(
        width: 64,
        index: 0,
      ),
      bits: 15,
      data: [
        32304,
      ],
    ),
    loop_count: Some(1),
  ),
]
