src/half_edge/snapshots/linnet__half_edge__tests__hairy_three_loop_dot.snap
---
source: src/half_edge/tests.rs
expression: graph.base_dot()
---
digraph {
   node [shape=circle,height=0.1,label=""];  overlap="scale";
 0 -> 1[ dir=none  color="red:blue;0.5 " ];
1 -> 0[ dir=none  color="red:blue;0.5 " ];
0 -> 1[ dir=none  color="red:blue;0.5 " ];
ext6 [shape=none, label=""];
 ext6 -> 0[dir=none ];
ext7 [shape=none, label=""];
 ext7 -> 1[dir=none ];
ext8 [shape=none, label=""];
 ext8 -> 1[dir=none ];
1 -> 2[ dir=none  color="red:blue;0.5 " ];
2 -> 3[ dir=none  color="red:blue;0.5 " ];
3 -> 0[ dir=none  color="red:blue;0.5 " ];
}
