src/half_edge/snapshots/linnet__half_edge__tests__hairy_three_loop_dot_internal.snap
---
source: src/half_edge/tests.rs
expression: graph.dot(&graph.full_node())
---
digraph {
   node [shape=circle,height=0.1,label=""];  overlap="scale"; layout="neato";
 start=2;
1 -> 0[ dir=none color="red:blue;0.5"];
0 -> 1[ dir=none color="red:blue;0.5"];
1 -> 0[ dir=none color="red:blue;0.5"];
ext6 [shape=none, label=""];
 ext6 -> 0[dir=none color="blue"];
ext7 [shape=none, label=""];
 ext7 -> 1[dir=none color="blue"];
ext8 [shape=none, label=""];
 ext8 -> 1[dir=none color="blue"];
2 -> 1[ dir=none color="red:blue;0.5"];
3 -> 2[ dir=none color="red:blue;0.5"];
0 -> 3[ dir=none color="red:blue;0.5"];
}
