src/half_edge/snapshots/linnet__half_edge__tests__three_loop.snap
---
source: src/half_edge/tests.rs
expression: graph
---
HedgeGraph(
  nodes: [
    HedgeNode(
      internal_graph: InternalSubGraph(
        filter: BitSeq(
          order: "bitvec::order::Lsb0",
          head: BitIdx(
            width: 64,
            index: 0,
          ),
          bits: 12,
          data: [
            0,
          ],
        ),
        loopcount: Some(0),
      ),
      hairs: BitSeq(
        order: "bitvec::order::Lsb0",
        head: BitIdx(
          width: 64,
          index: 0,
        ),
        bits: 12,
        data: [
          2073,
        ],
      ),
    ),
    HedgeNode(
      internal_graph: InternalSubGraph(
        filter: BitSeq(
          order: "bitvec::order::Lsb0",
          head: BitIdx(
            width: 64,
            index: 0,
          ),
          bits: 12,
          data: [
            0,
          ],
        ),
        loopcount: Some(0),
      ),
      hairs: BitSeq(
        order: "bitvec::order::Lsb0",
        head: BitIdx(
          width: 64,
          index: 0,
        ),
        bits: 12,
        data: [
          102,
        ],
      ),
    ),
    HedgeNode(
      internal_graph: InternalSubGraph(
        filter: BitSeq(
          order: "bitvec::order::Lsb0",
          head: BitIdx(
            width: 64,
            index: 0,
          ),
          bits: 12,
          data: [
            0,
          ],
        ),
        loopcount: Some(0),
      ),
      hairs: BitSeq(
        order: "bitvec::order::Lsb0",
        head: BitIdx(
          width: 64,
          index: 0,
        ),
        bits: 12,
        data: [
          384,
        ],
      ),
    ),
    HedgeNode(
      internal_graph: InternalSubGraph(
        filter: BitSeq(
          order: "bitvec::order::Lsb0",
          head: BitIdx(
            width: 64,
            index: 0,
          ),
          bits: 12,
          data: [
            0,
          ],
        ),
        loopcount: Some(0),
      ),
      hairs: BitSeq(
        order: "bitvec::order::Lsb0",
        head: BitIdx(
          width: 64,
          index: 0,
        ),
        bits: 12,
        data: [
          1536,
        ],
      ),
    ),
  ],
  involution: Involution(
    inv: [
      Sink(
        source_idx: Hedge(1),
      ),
      Source(
        data: EdgeData(
          orientation: Undirected,
          data: EdgeIndex(0),
        ),
        sink_idx: Hedge(0),
      ),
      Sink(
        source_idx: Hedge(3),
      ),
      Source(
        data: EdgeData(
          orientation: Undirected,
          data: EdgeIndex(1),
        ),
        sink_idx: Hedge(2),
      ),
      Sink(
        source_idx: Hedge(5),
      ),
      Source(
        data: EdgeData(
          orientation: Undirected,
          data: EdgeIndex(2),
        ),
        sink_idx: Hedge(4),
      ),
      Sink(
        source_idx: Hedge(7),
      ),
      Source(
        data: EdgeData(
          orientation: Undirected,
          data: EdgeIndex(3),
        ),
        sink_idx: Hedge(6),
      ),
      Sink(
        source_idx: Hedge(9),
      ),
      Source(
        data: EdgeData(
          orientation: Undirected,
          data: EdgeIndex(4),
        ),
        sink_idx: Hedge(8),
      ),
      Sink(
        source_idx: Hedge(11),
      ),
      Source(
        data: EdgeData(
          orientation: Undirected,
          data: EdgeIndex(5),
        ),
        sink_idx: Hedge(10),
      ),
    ],
  ),
  base_nodes: 4,
  node_data: [
    (),
    (),
    (),
    (),
  ],
  edge_data: [
    ((), Paired(
      source: Hedge(1),
      sink: Hedge(0),
    )),
    ((), Paired(
      source: Hedge(3),
      sink: Hedge(2),
    )),
    ((), Paired(
      source: Hedge(5),
      sink: Hedge(4),
    )),
    ((), Paired(
      source: Hedge(7),
      sink: Hedge(6),
    )),
    ((), Paired(
      source: Hedge(9),
      sink: Hedge(8),
    )),
    ((), Paired(
      source: Hedge(11),
      sink: Hedge(10),
    )),
  ],
  hedge_data: [
    NodeIndex(0),
    NodeIndex(1),
    NodeIndex(1),
    NodeIndex(0),
    NodeIndex(0),
    NodeIndex(1),
    NodeIndex(1),
    NodeIndex(2),
    NodeIndex(2),
    NodeIndex(3),
    NodeIndex(3),
    NodeIndex(0),
  ],
)
