src/half_edge/snapshots/linnet__half_edge__tests__three_loop_cycles.snap
---
source: src/half_edge/tests.rs
expression: cycles
---
[
  Cycle(
    filter: BitSeq(
      order: "bitvec::order::Lsb0",
      head: BitIdx(
        width: 64,
        index: 0,
      ),
      bits: 12,
      data: [
        4035,
      ],
    ),
    loop_count: Some(1),
  ),
  Cycle(
    filter: BitSeq(
      order: "bitvec::order::Lsb0",
      head: BitIdx(
        width: 64,
        index: 0,
      ),
      bits: 12,
      data: [
        4044,
      ],
    ),
    loop_count: Some(1),
  ),
  Cycle(
    filter: BitSeq(
      order: "bitvec::order::Lsb0",
      head: BitIdx(
        width: 64,
        index: 0,
      ),
      bits: 12,
      data: [
        4080,
      ],
    ),
    loop_count: Some(1),
  ),
]
