src/half_edge/snapshots/linnet__half_edge__tests__three_loop_dot.snap
---
source: src/half_edge/tests.rs
expression: graph.base_dot()
---
digraph {
   node [shape=circle,height=0.1,label=""];  overlap="scale";
 1 -> 0[ dir=none label="0:1|0",color="red:blue;0.5"];
0 -> 1[ dir=none label="1:3|2",color="red:blue;0.5"];
1 -> 0[ dir=none label="2:5|4",color="red:blue;0.5"];
2 -> 1[ dir=none label="3:7|6",color="red:blue;0.5"];
3 -> 2[ dir=none label="4:9|8",color="red:blue;0.5"];
0 -> 3[ dir=none label="5:11|10",color="red:blue;0.5"];
}
